@@ -5,9 +5,8 @@
        provider-name="stacked">
   <requires>
     <import addon="xbmc.python" version="2.0"/>
-	<!-- Waiting for dependency to become final
-	<import addon="script.common.plugin.cache" version="0.9.1"/>
 	<import addon="script.module.parsedom" version="0.9.1"/>
+	<!-- Waiting for dependency to become final
 	<import addon="script.module.simple.downloader" version="0.9.1"/>
 	-->
   </requires>
