@@ -10,4 +10,10 @@
     <string id="30009">No videos found. Please check your spelling</string>
     <string id="30010">or try again using different search words.</string>
 	<string id="30011">Please set a Download Location.</string>
+	<string id="30012">Downloads</string>
+	<string id="30013">Recently Released</string>
+	<string id="30014">Archived Shows</string>
+	<string id="30015">Search</string>
+	<string id="30016">Next Page</string>
+	<string id="30017">Video Type</string>
 </strings>
