@@ -1,6 +1,6 @@
 <settings>
    <setting id="type" type="select" lvalues="30001|30002|30003" label="30000" default="MP4:HD"/>
-   <!-- Waiting for simple downloader to become final
+   <!-- Waiting for simple downloader to become stable
    <setting id="download" type="bool" label="30004" default="false"/>
    <setting id="downloadPath" type="folder" enable="eq(-1,true)" label="30005" default="" /> 
    <setting id="folder" type="bool" enable="eq(-2,true)" label="30008" default="true"/>
