@@ -1,8 +1,10 @@
 [B]Version 2.0.1[/B]
 
 - Fixed error on start up
-- Disabled simple downloader dependency until 1.0 is released
+- Disabled Simple Downloader dependency until it's stable
+- Removed unneeded Common Cache dependency
 - Fixed fanart bug in "Recently Released"
+- Added English strings
 
 [B]Version 2.0.0[/B]
 
